--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,6 @@
     "style-loader": "^3.2.1",
     "webpack-dev-server": "^4.0.0",
     "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^6.2.4
+    "workbox-webpack-plugin": "^6.2.4"
   }
 }
